# MyCalculatorQT

./: .gitignore  CMakeLists.txt  build.sh  main.cpp
include/Window/include/: Window.hpp
include/Window/source/: Window.cpp  Window.ui
res/: window.qss
